# market-mind

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: apply-migrations.yml  compute-leaderboard.yml  compute-stock-rotation.yml  fetch-insights.yml  playwright.yml  refresh-eligible-universe.yml  resolve-predictions.yml  test.yml  validate-migrations.yml
data/: eligible_universe_seed.json
docs/: ARCHITECTURE.md  CASE_STUDY.md  DEPLOYMENT.md  INTERVIEW_CHEATSHEET.md  INTERVIEW_PREP.md  RUNBOOK.md  SETUP.md
pipeline/: .env.example  backtest.py  compute_leaderboard.py  compute_stock_rotation.py  config.py  fetch_insights.py  observability.py  pyproject.toml  refresh_eligible_universe.py  requirements.txt  resolve_predictions.py  supabase_client.py  trading_calendar.py
pipeline/fetchers/: _normalize.py  apewisdom.py  base.py  finnhub.py  fred.py  massive.py  reddit.py  sec_edgar.py  stocktwits.py  types.py  yfinance_fetcher.py
pipeline/processors/: _hf_breaker.py  aggregator.py  ranking.py  resolution_scoring.py  sentiment.py  summarizer.py  verdict.py
pipeline/tests/: test_normalize.py  test_ranking.py  test_resolve_predictions.py  test_sentiment_blend.py  test_social_score.py  test_summarizer.py  test_verdict.py
src/: proxy.ts
supabase/: config.toml  seed.sql
(+150 files in other folders)
