[project]
name = "marketmind-pipeline"
version = "0.1.0"
description = "Data ingestion + signal computation pipeline for MarketMind"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter
