[project]
name = "marketmind-pipeline"
version = "0.1.0"
description = "Data ingestion + signal computation pipeline for MarketMind"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Repo root on sys.path so the tests' `from pipeline.X` imports resolve.
# `.` (pipeline/) would only let `from fetchers.X` work; every test uses
# the fully-qualified `from pipeline.fetchers.X` form.
pythonpath = [".."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter
